Removing comment about NS_ASSERTION being deprecated.  r=me. b=188925